--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,1 +1,14 @@
-sonar.projectKey=Paarth1809_assignment-hubster_c2252cff-e033-4b72-8565-d30c60320886
+sonar.projectKey=Paarth1809_assignment-hubster
+sonar.organization=paarth1809
+
+
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=assignment-hubster
+#sonar.projectVersion=1.0
+
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
